[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/UI/history.png" type="Texture" id=1]
[ext_resource path="res://scripts/GuideInfo.gd" type="Script" id=2]
[ext_resource path="res://fonts/站酷快乐体2016修订版.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/Shader/selected_area.shader" type="Shader" id=4]
[ext_resource path="res://images/icon.png" type="Texture" id=5]
[ext_resource path="res://images/UI/help.png" type="Texture" id=6]
[ext_resource path="res://images/UI/mission.png" type="Texture" id=7]
[ext_resource path="res://images/UI/mission_finished.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )

[node name="GuideInfo" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HistoryLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 970.0
margin_bottom = 580.0
rect_min_size = Vector2( 950, 560 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"
text = "11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HistoryLabel"]
material = SubResource( 2 )
scale = Vector2( 15, 9 )
texture = ExtResource( 5 )
centered = false

[node name="TextLabel" type="RichTextLabel" parent="."]
margin_left = 262.0
margin_top = 180.0
margin_right = 762.0
margin_bottom = 480.0
rect_min_size = Vector2( 500, 300 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "111111111111111111111111111111111111111111111"
text = "111111111111111111111111111111111111111111111"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HistoryButton" type="TextureButton" parent="."]
margin_left = 962.8
margin_top = 10.0
margin_right = 1026.8
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="TextureButton" parent="."]
margin_left = 901.6
margin_top = 10.0
margin_right = 965.6
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionButton" type="TextureButton" parent="."]
margin_left = 840.4
margin_top = 10.0
margin_right = 904.4
margin_bottom = 74.0
rect_scale = Vector2( 0.8, 0.8 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
